add initial implementation of search API
